[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://asset/ui/icons/squad_icon/icon_squad_spearman.png" type="Texture" id=2]
[ext_resource path="res://asset/scene/game_ui/squad_panel_detail/squad_panel_detail.gd" type="Script" id=3]
[ext_resource path="res://asset/ui/bar/bar.png" type="Texture" id=4]

[node name="squad_panel_detail" type="PanelContainer"]
margin_left = -1.0
margin_right = 289.0
margin_bottom = 239.0
grow_vertical = 0
rect_min_size = Vector2( 200, 150 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 283.0
margin_bottom = 262.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 255.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
show_behind_parent = true
margin_right = 100.0
margin_bottom = 255.0
rect_min_size = Vector2( 100, 150 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 276.0
margin_bottom = 255.0
grow_vertical = 0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 172.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Spearman"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2"]
margin_top = 25.0
margin_right = 172.0
margin_bottom = 130.0
text = "Spearman
 




"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 134.0
margin_right = 172.0
margin_bottom = 225.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 56.0
margin_bottom = 91.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "Attack  "

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 56.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 15 )
text = "Armor  "

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 56.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 15 )
text = "Hit Point"

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 56.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 15 )
text = "Range  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 56.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 15 )
text = "Speed  "

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 60.0
margin_right = 172.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 112.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="TextureProgress2" type="TextureProgress" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 19.0
margin_right = 112.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_editor_description_": ""
}

[node name="TextureProgress3" type="TextureProgress" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 38.0
margin_right = 112.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="TextureProgress4" type="TextureProgress" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 57.0
margin_right = 112.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="TextureProgress5" type="TextureProgress" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 76.0
margin_right = 112.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
[connection signal="gui_input" from="." to="." method="_on_squad_panel_detail_gui_input"]
